--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./php
     volumes:
       - './app/:/var/www/html'
-      - './data/sites:/etc/apache2/sites-available'
+      - './sites:/etc/apache2/sites-enabled'
       - './data/dev:/home/dev'
     links:
       - db
@@ -13,6 +13,8 @@ services:
       - db
     environment:
       PHP_IDE_CONFIG: serverName=Docker
+    ports:
+      - 8080:80
     networks:
       app_net:
         ipv4_address: 172.16.1.12
@@ -23,6 +25,8 @@ services:
       - './sql:/home/sql'
     environment:
       MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 13306:3306
     networks:
       app_net:
         ipv4_address: 172.16.1.11
