--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app:
+    container_name: botanik_app
     build:
       context: ./php
     volumes:
@@ -19,6 +20,7 @@ services:
       app_net:
         ipv4_address: 172.16.1.12
   db:
+    container_name: botanik_db
     image: 'mysql:5.7'
     volumes:
       - './base:/var/lib/mysql'
