--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - './app/:/var/www/html'
       - './sites:/etc/apache2/sites-enabled'
       - './data/dev:/home/dev'
+      - './php/php.ini:/usr/local/etc/php/php.ini'
     links:
       - db
     depends_on:
@@ -18,7 +19,7 @@ services:
       - '8080:80'
     networks:
       app_net:
-        ipv4_address: 172.16.1.12
+        ipv4_address: 172.16.1.51
   db:
     container_name: botanik_db
     image: 'mysql:5.7'
@@ -31,11 +32,11 @@ services:
       - '13306:3306'
     networks:
       app_net:
-        ipv4_address: 172.16.1.11
+        ipv4_address: 172.16.1.50
 networks:
   app_net:
     driver: bridge
     ipam:
       driver: default
       config:
-        - subnet: 172.16.1.0/24
+        - subnet: 172.16.1.48/29
