--- a/app/composer.json
+++ b/app/composer.json
@@ -20,7 +20,8 @@
         "laravel/ui": "^3.0",
         "phpoffice/phpspreadsheet": "^1.15",
         "telegram-bot/api": "^2.3",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
